--- a/gradient_dialog.ui
+++ b/gradient_dialog.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>394</width>
-    <height>207</height>
+    <width>320</width>
+    <height>178</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -15,10 +15,17 @@
   </property>
   <layout class="QGridLayout" name="gridLayout">
    <property name="sizeConstraint">
-    <enum>QLayout::SetFixedSize</enum>
+    <enum>QLayout::SizeConstraint::SetFixedSize</enum>
    </property>
    <item row="0" column="0">
-    <widget class="GradientEdit" name="gradient_edit" native="true"/>
+    <widget class="GradientEdit" name="gradient_edit" native="true">
+     <property name="minimumSize">
+      <size>
+       <width>96</width>
+       <height>96</height>
+      </size>
+     </property>
+    </widget>
    </item>
    <item row="0" column="1">
     <widget class="QGroupBox" name="type_group">
@@ -81,15 +88,22 @@
     </widget>
    </item>
    <item row="1" column="0" colspan="3">
-    <widget class="GradientStopsEdit" name="stops_edit" native="true"/>
+    <widget class="GradientStopsEdit" name="stops_edit" native="true">
+     <property name="minimumSize">
+      <size>
+       <width>0</width>
+       <height>16</height>
+      </size>
+     </property>
+    </widget>
    </item>
    <item row="2" column="0" colspan="3">
     <widget class="QDialogButtonBox" name="buttonBox">
      <property name="orientation">
-      <enum>Qt::Horizontal</enum>
+      <enum>Qt::Orientation::Horizontal</enum>
      </property>
      <property name="standardButtons">
-      <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
+      <set>QDialogButtonBox::StandardButton::Cancel|QDialogButtonBox::StandardButton::Ok</set>
      </property>
     </widget>
    </item>
@@ -118,12 +132,12 @@
    <slot>accept()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>257</x>
-     <y>197</y>
+     <x>266</x>
+     <y>169</y>
     </hint>
     <hint type="destinationlabel">
      <x>157</x>
-     <y>274</y>
+     <y>178</y>
     </hint>
    </hints>
   </connection>
@@ -134,12 +148,12 @@
    <slot>reject()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>325</x>
-     <y>197</y>
+     <x>310</x>
+     <y>169</y>
     </hint>
     <hint type="destinationlabel">
      <x>286</x>
-     <y>274</y>
+     <y>178</y>
     </hint>
    </hints>
   </connection>
@@ -150,12 +164,12 @@
    <slot>setDisabled(bool)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>192</x>
-     <y>113</y>
+     <x>179</x>
+     <y>98</y>
     </hint>
     <hint type="destinationlabel">
      <x>262</x>
-     <y>111</y>
+     <y>98</y>
     </hint>
    </hints>
   </connection>
